--- a/contact/style/contact.css
+++ b/contact/style/contact.css
@@ -30,6 +30,32 @@ html {
     width:  20em;
 
 }
+/*tempdata*/
+.star-rating {
+    direction: rtl;
+    display: relative;
+    padding: 20px
+}
+
+.star-rating input[type=radio] {
+    display: none
+}
+
+.star-rating label {
+    
+    color: #bbb;
+    font-size: 25px;
+    padding: 0;
+    cursor: pointer;
+    -webkit-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out
+}
+
+.star-rating label:hover,
+.star-rating label:hover ~ label,
+.star-rating input[type=radio]:checked ~ label {
+    color: #50c2d1;
+}
 
 /* Clear floats after the columns */
 
