changed font to Domine site-wide

--- a/contact/style/contact.css
+++ b/contact/style/contact.css
@@ -94,7 +94,7 @@ html {
     padding: none;
     border: none;
     color: white;
-    font-family: 'Dancing Script', sans-serif;
+    font-family: 'Domine', serif;
     font-size: 25px;
     background-color: transparent;
 }
