--- a/gallery/style/style.css
+++ b/gallery/style/style.css
@@ -12,12 +12,12 @@ body {
 }
 
 .Heders {
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Domine', serif;
 }
 
 #pro {
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Domine', serif;
     font-size: 40px;
     margin-top: 30px;
 }
@@ -26,7 +26,7 @@ body {
     text-align: center;
     padding-left: 40px;
     padding-right: 40px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Domine', serif;
     font-size: 1.2em;
     margin-top: 20px;
 }
@@ -143,7 +143,7 @@ p {
 
 .proName {
     font-size: 30px;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Domine', serif;
     margin: 0px;
     margin-top: 10px;
     font-weight: bold;
@@ -186,14 +186,14 @@ p {
 @media (max-width: 767px) {
     #pro {
         text-align: center;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Domine', serif;
         font-size: 30px;
         margin-top: 0px;
     }
     #ppro {
         padding-left: 20px;
         padding-right: 20px;
-        font-family: 'Montserrat', sans-serif;
+        font-family: 'Domine', serif;
         font-size: 1.1em;
         margin-top: 20px;
     }
