--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -3,7 +3,7 @@
 body {
     margin: 0%;
     width: 100%;
-    font-family: 'Dancing Script', cursive;
+    font-family: 'Domine', serif;
     font-size: 25px;
     background-image: url('./grey2.png');
     background-color: transparent;
@@ -83,7 +83,7 @@ body {
     padding: 8px 8px 8px 32px;
     width: 100%;
     text-decoration: none;
-    font-family: 'Pacifico', cursive;
+    font-family: 'Domine', serif;
     font-size: 25px;
     color: white;
     border: 1px black;
@@ -207,7 +207,7 @@ body {
 
 #cursive {
     padding-top: 0;
-    font-family: 'Cormorant Garamond', serif, 700;
+    font-family: 'Domine', serif, 700;
     font-size: 1.9em;
 }
 
@@ -287,7 +287,7 @@ body {
 }
 
 .overlay {
-    background-color: black;
+    background-color: #50c2d1;
     position: relative;
     width: 100%;
     height: 30vh;
