--- a/product/style/style.css
+++ b/product/style/style.css
@@ -13,7 +13,7 @@ body {
 
 #pro {
     text-align: center;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 40px;
     margin-top: 30px;
 }
@@ -22,7 +22,7 @@ body {
     text-align: center;
     padding-left: 40px;
     padding-right: 40px;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 1.2em;
     margin-top: 20px;
 }
@@ -56,13 +56,14 @@ body {
 }
 
 #card-main {
+    margin-top: 0;
     display: none;
     height: 80vh;
     width: fit-content;
     position: fixed;
     left: 10vw;
     top: 110px;
-    z-index: 99;
+    z-index: 100;
     background-color: white;
     /* border-style: solid;
     border-width: thin;
@@ -101,8 +102,8 @@ body {
     background-repeat: no-repeat;
     width: 40vw;
     height: 80vh;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 .prod {
@@ -115,7 +116,7 @@ body {
     grid-area: box1;
     width: 40vw;
     height: 80vh;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .prodEtail {
@@ -150,7 +151,7 @@ p {
 
 .proName {
     font-size: 25px;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     margin: 0px;
     margin-top: 10px;
     font-weight: normal;
@@ -158,9 +159,8 @@ p {
 
 #proName-main {
     font-size: 30px;
-    font-family: 'Domine', serif;
-    margin: 0px;
-    margin-top: 10px;
+    font-family: 'Barlow', sans-serif;
+    margin: 10%;
     font-weight: bold;
 }
 
@@ -168,7 +168,7 @@ p {
     text-align: justify;
     padding: 0px 30px;
     font-size: 1em;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
 }
 
 #close {
@@ -242,14 +242,14 @@ p {
     }
     #pro {
         text-align: center;
-        font-family: 'Domine', serif;
+        font-family: 'Barlow', sans-serif;
         font-size: 30px;
         margin-top: 0px;
     }
     #ppro {
         padding-left: 20px;
         padding-right: 20px;
-        font-family: 'Domine', serif;
+        font-family: 'Barlow', sans-serif;
         font-size: 1.1em;
         margin-top: 20px;
     }
@@ -276,6 +276,7 @@ p {
     }
     #prodImg-main {
         /* background-size: cover; */
+        border-radius: 0;
         background-position: center;
         background-repeat: no-repeat;
         width: 100vw;
@@ -288,6 +289,7 @@ p {
         margin-bottom: 80px;
     }
     #card-main {
+        margin-top: 8% !important;
         display: none;
         height: 100%;
         width: 100%;
