--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -3,7 +3,7 @@
 body {
     margin: 0%;
     width: 100%;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 25px;
     background-image: url('./grey2.png');
     background-color: transparent;
@@ -38,7 +38,7 @@ body {
 .topnav.scrolled {
     /* background-color: blue !important; */
     background-image: url(waves2.png);
-    transition: height 2000ms linear;
+    transition: background-image 1s ease-in-out;
 }
 
 
@@ -94,7 +94,7 @@ body {
     padding: 8px 8px 8px 32px;
     width: 100%;
     text-decoration: none;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 25px;
     color: white;
     border: 1px black;
@@ -218,7 +218,7 @@ body {
 
 #cursive {
     padding-top: 0;
-    font-family: 'Domine', serif, 700;
+    font-family: 'Barlow', sans-serif, 700;
     font-size: 1.9em;
 }
 
