--- a/services/style/services.css
+++ b/services/style/services.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
 }
 
 html {
@@ -48,7 +48,7 @@ html {
 #text2 {
     font-size: 20px;
     text-align: left;
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     /* padding: 30px; */
 }
 
