--- a/style/services.css
+++ b/style/services.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Domine', serif;
+    font-family: 'Barlow', sans-serif;
     font-size: 20px;
 }
 
@@ -14,9 +14,6 @@ html {
     padding-top: 100px;
     width: 100vw;
 }
-
-
-
 
 @media (max-width: 767px) {
     .con {
