--- a/product/style/style.css
+++ b/product/style/style.css
@@ -179,6 +179,7 @@ p {
     margin-top: 10px;
     background-image: url("../../static/assets/close.png");
     background-size: cover;
+    filter: brightness(0.5);
     /* background-color: black;
     border-radius: 50px; */
     /* opacity: 0.5; */
