changes in navbar scroll length

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -213,6 +213,7 @@ html {
 
 @media (max-width: 767px) {
     .banner-div {
+        background-attachment: initial;
         height: 110%;
     }
     .display-left {
