--- a/static/css/index.css
+++ b/static/css/index.css
@@ -155,7 +155,7 @@ html {
     margin: -10%;
     width: 110%;
     height: 118%;
-    background-image: url('../images/bg-image-new-min.jpg');
+    background-image: url('../images/fishless.jpg');
     background-attachment: fixed;
     background-size: cover;
 }
